# DJZ-Pedalboard

./: DJZ_Pedalboard.py  README.md  __init__.py  pyproject.toml
careless-voicefx/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
careless-voicefx/src/: App.tsx  index.css
careless-voicefx/src/components/: AudioPlayer.tsx  AudioUploader.tsx  PresetManager.tsx  ProcessingPanel.tsx
careless-voicefx/src/hooks/: useAudioState.ts
careless-voicefx/src/lib/: audioEngine.ts  fontawesome.ts  pdlParser.ts
careless-voicefx/src/types/: audio.ts
